--- a/style.css
+++ b/style.css
@@ -3,7 +3,11 @@
    "how to change link color." */
 
 body {
-background-image: linear-gradient(to top, #00ffa8 0%, #00b6ff 50%, #8119f5 100%);
+background: rgb(0,255,168);
+background: -moz-linear-gradient(0deg, rgba(0,255,168,1) 0%, rgba(0,182,255,1) 50%, rgba(129,25,245,1) 100%);
+background: -webkit-linear-gradient(0deg, rgba(0,255,168,1) 0%, rgba(0,182,255,1) 50%, rgba(129,25,245,1) 100%);
+background: linear-gradient(0deg, rgba(0,255,168,1) 0%, rgba(0,182,255,1) 50%, rgba(129,25,245,1) 100%);
+filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#00ffa8",endColorstr="#8119f5",GradientType=1);
 color: black;
 font-family: 'Verdana';
 text-align: center;
